# todo-merger

./: .bumpversion.cfg  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json  renovate.json5
.github/actions/uvbuild/: action.yaml
.github/workflows/: ci-security.yaml  release-please.yaml  release-vulnerabilities.yaml  release.yaml  test.yaml
todo_merger/: __init__.py  _auth.py  _cache.py  _config.py  _gitea.py  _github.py  _gitlab.py  _helpers.py  _issues.py  _msplanner.py  _personal_todos.py  _private_tasks.py  _types.py  _views.py  main.py
todo_merger/static/sass/: custom.scss
todo_merger/templates/: base.html  index.html  new.html
