[project]
name = "todo-merger"
version = "1.3.2"
description = "Provide an overview of your assigned issues on GitHub, GitLab, Gitea and Microsoft Planner"
authors = [{ name = "Max Mehl", email = "mail@mehl.mx" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "GPL-3.0-only"
keywords = [
    "github",
    "gitlab",
    "gitea",
    "mircosoft-planner",
    "todo",
    "issues",
    "pull-requests",
    "merge-requests",
    "dashboard",
    "planner",
    "tasks",
    "getting-things-done",
    "gtg",
    "productivity",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "flask>=3.1.2,<4",
    "httpx>=0.28.1,<0.29",
    "pygithub>=2.8.1,<3",
    "python-gitlab>=8.0.0,<9",
    "toml>=0.10.2,<0.11",
    "platformdirs>=4.5.0,<5",
    "python-daemon>=3.1.2,<4",
    "python-dateutil>=2.9.0.post0,<3",
    "sass-embedded>=0.1.3,<0.2",
    "httpx>=0.28.1",
]

[project.urls]
Repository = "https://github.com/mxmehl/todo-merger"

[project.scripts]
todo-merger = "todo_merger.__init__:main"

[dependency-groups]
dev = ["ruff>=0.15.10", "ty>=0.0.29"]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["todo_merger"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

# FORMATTING and LINTING settings
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T", "FBT", "LOG015", "COM812", "ERA001", "S310", "D205", "D212", "PTH123"]
[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101", "PLR", "PT011", "ANN001"]
[tool.ruff.lint.pydocstyle]
convention = "google"

# TY settings
[tool.ty.src]
include = ["todo_merger"]
